@@ -1,0 +1,2 @@
+#!/usr/bin/env bash
+nostril --sec $(nostril --hash 0) --created-at 0000000000 --envelope --content "0"
